# PadeOpsIO

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test_file.txt
padeopsIO/: ActuatorDisk.py  PadeOpsViz.py  __init__.py  budgetIO.py  budget_utils.py  budgetkey.py  deficitIO.py  deficitkey.py  eddy_visc.py  figureSettings.py  filtered_ADM.py  inflow.py  io_utils.py  nml_utils.py  padeopsIO.py  padeopsIO_quickstart.ipynb  padeplots.py  test_nb.ipynb  testing.py  turbine.py  turbineArray.py  turbine_calc.py  wake_model_utils.py  wake_utils.py  yawIO.py
python/: PadeOpsIO.py  budget_key.py
src/: PadeOpsIO.py
test_data/: example_metadata.npz
tests/: test_nb.ipynb  testing.py
