[tool.poetry]
name = "padeopsio"
version = "0.1.0"
description = ""
authors = ["Kirby <kirby.heck@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1, <=3.9"
numpy = ">=1.16.5, <1.23.0"
scipy = ">=1.6, <1.7.3"

matplotlib = "^3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
