[tool.poetry]
name = "padeopsIO"
version = "0.1.0"
description = ""
authors = ["Kirby <kirby.heck@gmail.com>"]
license = "MIT"
packages = [{ include = "padeopsIO" }]

[tool.poetry.dependencies]
python = ">=3.7"
numpy = ">=1.16.5, <1.23.0"
scipy = ">=1.6, <1.7.3"
matplotlib = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
